--- a/index.html
+++ b/index.html
@@ -61,6 +61,69 @@
     </div>
     </div>
  </section>
+ <section class="container flex grow">
+    <h2 class="grow_title">
+        Grow 2.5x faster than your competitors.
+    </h2>
+    <div class="grow_flex">
+        <div class="grow_element">
+            <img src="./img/lion.png" alt="lion">
+            <div class="grow_item">
+                <h3 class="grow_pretitle">
+                    RIVER ISLAND
+                </h3>
+                <p class="grow_text">
+                    River Island transforms the customer experience with personalization.
+                </p>
+            </div>
+        </div>
+        <div class="grow_element">
+            <img src="./img/cosmo.png" alt="cosmo">
+            <div class="grow_item">
+                <h3 class="grow_pretitle">
+                    RIVER ISLAND
+                </h3>
+                <p class="grow_text">
+                    River Island transforms the customer experience with personalization.
+                </p>
+            </div>
+        </div>
+    </div>
+ </section>
+ <section class="container commerse">
+    <h2 class="commerse_title">
+        Qubit CommerceAI.
+    </h2>
+    <div class="flex">
+        <div>
+            <img src="./img/Frame.svg" alt="Frame">
+            <h5 class="commerse_pretile">
+                More insight
+            </h5>
+            <p class="commerse_text">
+                Learn which products drive performance and which don't, through automated insights you can action.
+            </p>
+        </div>
+        <div>
+            <img src="./img/Frameone.svg" alt="Frameone">
+            <h5 class="commerse_pretile">
+                More personal
+            </h5>
+            <p class="commerse_text">
+                Qubit CommerceAI generates a model per shopper to make every customer interaction more relevant.
+            </p>
+        </div>
+        <div>
+            <img src="./img/Frametwo.svg" alt="Frametwo">
+            <h5 class="commerse_pretile">
+                More effective
+            </h5>
+            <p class="commerse_text">
+                Qubit fuses data, intent, and design tools to enable your team to create more effective customer experiences.
+            </p>
+        </div>
+    </div>
+ </section>
  <footer class="footer">
     <div class="container flex">
     <nav class="footer_nav">
