--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </form>
           
     </div>
-    <div>
+    <div class="main_img">
         <img src="./img/IMAGE.svg" alt="hand">
     </div>
     </div>
