Renamed image files

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           
     </div>
     <div class="main_img">
-        <img src="./img/IMAGE.svg" alt="hand">
+        <img src="./img/mainImage.svg" alt="hand">
     </div>
     </div>
  </section>
@@ -96,7 +96,7 @@
     </h2>
     <div class="flex">
         <div>
-            <img src="./img/Frame.svg" alt="Frame">
+            <img src="./img/frame.svg" alt="Frame">
             <h5 class="commerse_pretile">
                 More insight
             </h5>
@@ -105,7 +105,7 @@
             </p>
         </div>
         <div>
-            <img src="./img/Frameone.svg" alt="Frameone">
+            <img src="./img/frameone.svg" alt="Frameone">
             <h5 class="commerse_pretile">
                 More personal
             </h5>
@@ -114,7 +114,7 @@
             </p>
         </div>
         <div>
-            <img src="./img/Frametwo.svg" alt="Frametwo">
+            <img src="./img/frametwo.svg" alt="Frametwo">
             <h5 class="commerse_pretile">
                 More effective
             </h5>
