Fixed responsive layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  </header>
  <section class="main">
     <div class="container flex">
-    <div>
+    <div class="main_container_content">
          <h1 class="maine_title">
             Make ecommerce 
            <span class=" maine_title maine_title-violet"> More personal.</span>
@@ -95,7 +95,7 @@
         Qubit CommerceAI.
     </h2>
     <div class="flex">
-        <div>
+        <div class="commerse_tile">
             <img src="./img/frame.svg" alt="Frame">
             <h5 class="commerse_pretile">
                 More insight
@@ -104,7 +104,7 @@
                 Learn which products drive performance and which don't, through automated insights you can action.
             </p>
         </div>
-        <div>
+        <div class="commerse_tile">
             <img src="./img/frameone.svg" alt="Frameone">
             <h5 class="commerse_pretile">
                 More personal
@@ -113,7 +113,7 @@
                 Qubit CommerceAI generates a model per shopper to make every customer interaction more relevant.
             </p>
         </div>
-        <div>
+        <div class="commerse_tile">
             <img src="./img/frametwo.svg" alt="Frametwo">
             <h5 class="commerse_pretile">
                 More effective
