--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </h2>
     <div class="flex">
         <div class="commerse_tile">
-            <img src="./img/frame.svg" alt="Frame">
+            <img src="./img/searchIcon.svg" alt="Search icon">
             <h5 class="commerse_pretile">
                 More insight
             </h5>
@@ -105,7 +105,7 @@
             </p>
         </div>
         <div class="commerse_tile">
-            <img src="./img/frameone.svg" alt="Frameone">
+            <img src="./img/userIcon.svg" alt="User icon">
             <h5 class="commerse_pretile">
                 More personal
             </h5>
@@ -114,7 +114,7 @@
             </p>
         </div>
         <div class="commerse_tile">
-            <img src="./img/frametwo.svg" alt="Frametwo">
+            <img src="./img/chartIcon.svg" alt="Chart icon">
             <h5 class="commerse_pretile">
                 More effective
             </h5>
